--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,7 +1,12 @@
 
 
 body {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
+}
+
+* {
+    box-sizing: border-box;
 }
 
 header {
@@ -49,16 +54,29 @@ header {
     background: linear-gradient(#e66465, #9198e5);
 }
 
+.top-nav-link::before {
+    content: "";
+    position: absolute;
+    bottom: calc(50% - 15px);
+    border-radius: 1px;
+    margin: 0 auto;
+    height: 2px;
+    width: 86%;
+    background-color: white;
+}
+
 nav > a {
     text-decoration: none;
     color: inherit;
 }
 
 main {
+    background-color: #ddd;
     width: 100%;
 }
 
 .content {
     width: 90%;
     margin: auto;
+    border: 2px solid turquoise;
 }
