--- a/src/styles/manga-result.css
+++ b/src/styles/manga-result.css
@@ -28,14 +28,16 @@
     height: max-content;
 }
 
-.manga-info {
+.heart {
     position: absolute;
-    inset: 0;
-    height: 350px;
-    width: calc(14000px/63);
-    border-radius: 12px;
+    right: 10px;
+    border-radius: 50%;
     transition: opacity 0.3s ease;
+    width: 40px;
+    height: auto;
+    aspect-ratio: 1/1;
     padding: 5px;
+    background-color: #555555DD;
 }
 
 .info {
