--- a/src/styles/authForm.css
+++ b/src/styles/authForm.css
@@ -20,11 +20,9 @@
 .form-submit {
     display: block;
     margin: 20px auto;
-    height: 30px;
-}
-
-.form-span > a {
-    text-decoration: none;
+    height: 34px;
+    padding: 0 10px;
+    border-radius: 10px;
 }
 
 a.login, h1.login {
@@ -39,6 +37,9 @@ a.signup, h1.signup {
     display: block;
     height: 25px;
     width: 300px;
+    border: 1px solid gray;
+    border-radius: 6px;
+    padding-left: 6px;
 }
 
 label {
