--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -5,19 +5,60 @@
     margin-bottom: 20px;
 }
 
+.manga-search:focus-within {
+    outline: 2px solid green;
+    border-radius: 6px;
+}
+
 .search, .search-btn {
-    padding-left: 7px;
     height: 30px;
     border: 1px solid gray;
 }
 
 .search {
+    padding-left: 7px;
     border-radius: 6px 0 0 6px;
     width: 100%;
 }
 
+.search:focus, .search-btn:focus {
+    outline: none;
+}
+
 .search-btn {
+    position: relative;
     font-family: inherit;
     border-radius: 0 6px 6px 0;
-    cursor: pointer;
+    background-color: #777;
+    width: 40px;
+}
+
+.search-btn:hover {
+    background-color: #555;
+}
+
+.search-btn::before, .search-btn::after {
+    content: "";
+    position: absolute;
+    z-index: 20;
+}
+
+/* Circle */
+.search-btn::before {
+    left: 7.5px;
+    top: 4.5px;
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 2px solid white;
+}
+
+/* Handle */
+.search-btn::after {
+    right: 7px;
+    bottom: 7px;
+    width: 10px;
+    height: 2px;
+    background-color: white;
+    rotate: 45deg;
 }
