--- a/src/styles/mangaInfo.css
+++ b/src/styles/mangaInfo.css
@@ -3,8 +3,19 @@
     width: 100%;
 }
 
+.manga-info-img {
+    display: block;
+    border-radius: 6px;
+    width: 100%;
+    height: auto;
+}
+
 .main-info {
-    width: 70%;
+    width: 100%;
+}
+
+.sidebar {
+    width: min(30%, 300px);
 }
 
 .manga-title {
@@ -21,10 +32,6 @@
     margin: 6px auto;
     padding: 8px 10px;
     border-radius: 10px;
-}
-
-.sidebar {
-    width: 30%;
 }
 
 .details {
@@ -54,4 +61,117 @@
     padding: 0 6px;
     background-color: #eee;
     border-radius: 12px;
+}
+
+/* Carousel recommendation styling */
+.manga-recommendation {
+    position: relative;
+    width: 150px;
+}
+
+.img-link {
+    width: inherit;
+}
+
+.recommended {
+    position: relative;
+    width: max-content;
+}
+
+.manga-container {
+    display: flex;
+    overflow-x: auto;
+    margin: 4px 0;
+    column-gap: 5px;
+    scroll-behavior: smooth;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+}
+
+.manga-container::-webkit-scrollbar {
+    display: none;
+}
+
+.manga-img.small {
+    position: relative;
+    height: auto;
+}
+
+.img-container {
+    position: relative;
+}
+
+.title-container {
+    width: inherit;
+    height: 100%;
+    top: 0;
+    border-radius: 12px;
+    background-color: #00000066;
+    position: absolute;
+}
+
+.recommendation-title {
+    text-align: center;
+    color: white;
+    padding: 0 4px;
+}
+
+.carousel-btn {
+    position: absolute;
+    top: 50%;
+    height: 40px;
+    width: 40px;
+    background-color: #000000AA;
+    border-radius: 50%;
+    z-index: 20;
+}
+
+.carousel-btn:hover {
+    background-color: #000000CC;
+}
+
+.arrow {
+    display: block;
+    height: inherit;
+    position: relative;
+}
+
+.arrow::after, .arrow::before  {
+    position: absolute;
+    content: "";
+    width: 3px;
+    height: 14px;
+    background-color: #FFFFFFCC;
+}
+
+.arrow::after {
+    top: 9px;
+}
+
+.arrow::before {
+    bottom: 9px;
+}
+
+.arrow-next::after, .arrow-prev::before {
+    rotate: 45deg;
+}
+
+.arrow-next::before, .arrow-prev::after {
+    rotate: -45deg;
+}
+
+.arrow-next::after, .arrow-next::before {
+    left: 12px;
+}
+
+.arrow-prev::after, .arrow-prev::before {
+    right: 12px;
+}
+
+.carousel-next {
+    left: -4px;
+}
+
+.carousel-prev {
+    right: -8px;
 }
