--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -112,3 +112,29 @@
     background-color: inherit;
     padding: 0;
 }
+
+.overlay {
+    position: fixed;
+    top: 0;
+    background-color: #000000AA;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 50;
+}
+
+.message-title {
+    margin: 0;
+    text-align: center;
+}
+
+.message-container {
+    margin: auto;
+    background-color: lightblue;
+    width: 400px;
+    height: 300px;
+    border-radius: 20px;
+    padding: 20px;
+}
