--- a/src/styles/navbar.css
+++ b/src/styles/navbar.css
@@ -138,3 +138,15 @@
     border-radius: 20px;
     padding: 20px;
 }
+
+.not-found > .message {
+    text-align: center;
+    margin-top: 0;
+    font-size: 40px;
+}
+
+.not-found > h1 {
+    text-align: center;
+    font-size: 200px;
+    margin: 0;
+}
