--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -59,3 +59,17 @@ main {
 .message {
     font-weight: 400;
 }
+
+.home-text {
+    width: fit-content;
+    background-color: #aaaaaa;
+    color: white;
+    border-radius: 10px;
+    padding: 5px 20px;
+    margin: 20px auto;
+    font-size: 20px;
+}
+
+.home-text > p {
+    margin: 4px 0;
+}
