Fixed some styling and maded navbar fixed. Footer is anchored to the bottom. There may be an issue with margin ruining the caluclation for the min-height.

--- a/src/styles/carousel.css
+++ b/src/styles/carousel.css
@@ -25,6 +25,7 @@
 .manga-container {
     display: flex;
     overflow-x: auto;
+    overflow-y: hidden;
     margin: 4px auto;
     column-gap: 5px;
     scroll-behavior: smooth;
