--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -10,8 +10,11 @@ body {
 }
 
 header {
+    position: fixed;
+    height: 60px;
     background-color: #000;
     width: 100%;
+    z-index: 48;
 }
 
 footer {
@@ -19,6 +22,12 @@ footer {
     display: flex;
     justify-content: center;
     column-gap: 20px;
+    height: 140px;
+}
+
+.header-title {
+    margin: 0;
+    padding: 20px 0;
 }
 
 .page-heading {
@@ -53,6 +62,8 @@ footer {
 }
 
 main {
+    padding-top: 60px; /* 60px navbar */
+    min-height: calc(100vh - 140px); /* 140px footer */
     width: 100%;
 }
 
